policies/kyverno/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: disallow-privileged
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - taskapp
      validate:
        message: Privileged containers are not allowed.
        pattern:
          spec:
            =(securityContext):
              =(runAsNonRoot): true
            containers:
              - name: "*"
                =(securityContext):
                  =(privileged): false
                  =(allowPrivilegeEscalation): false
